# linkdedin_mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/domain-guard/: domain-guard.md
.claude/agents/mcp-reviewer/: mcp-reviewer.md
.claude/skills/lint/: SKILL.md
.claude/skills/mcp-dev/: SKILL.md
.claude/skills/test/: SKILL.md
.claude/skills/typecheck/: SKILL.md
.claude/skills/validate/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  lint.yml  test.yml  typecheck.yml
src/linkedin_mcp/: container.py  server.py
src/linkedin_mcp/application/: dtos.py
src/linkedin_mcp/application/use_cases/: __init__.py  authenticate.py  check_auth.py  content_calendar.py  draft_post.py  get_config.py  get_drafts.py  get_optimal_time.py  get_scheduled_posts.py  optimize_post.py  publish_post.py  schedule_post.py  set_default_tone.py  suggest_hashtags.py
src/linkedin_mcp/domain/entities/: __init__.py  post.py  user_config.py
src/linkedin_mcp/infrastructure/: __init__.py  json_config_repository.py  json_credentials_repository.py  json_post_repository.py  linkedin_api_client.py  oauth_server.py  serialization.py
tests/: conftest.py  test_container.py  test_server.py
tests/application/: conftest.py  test_authenticate.py  test_use_cases.py
tests/domain/: conftest.py  test_calendar_planner.py  test_content_optimizer.py  test_hashtag_suggester.py  test_post.py  test_post_drafter.py
tests/infrastructure/: conftest.py  test_json_repositories.py  test_linkedin_api.py  test_oauth_server.py
(+19 files in other folders)
