[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linkedin-mcp"
version = "0.1.0"
description = "LinkedIn Strategic Posting MCP Server"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "loguru>=0.7",
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0",
]

[project.scripts]
linkedin-mcp = "linkedin_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/linkedin_mcp"]

[dependency-groups]
dev = [
    "black>=26.1",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.5",
]

[tool.mypy]
strict = true
python_version = "3.10"
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "SIM", "TCH", "RUF",
    "ANN", "D", "PT", "RET", "C4", "PIE", "T20", "ERA",
]
ignore = [
    "D100", "D104", "D105", "D107", "D203", "D213",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D102", "D103", "ANN201"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
